# face-recognition

./: README.md  detector.py  main.py  pyproject.toml
output/: encodings.pkl
