[project]
name = "face-recog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlib>=20.0.0",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pip>=25.3",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
